# product-inspector-ai

./: DEPENDENCIES.md  LICENSE  README.md  app.py  pyproject.toml  setup.py  ss1.jpg.avif
.streamlit/: config.toml
assets/: demo_video.py
pages/: dashboard.py  product_setup.py  reports.py
utils/: camera.py  database.py  demo_video.py  detection.py  reporting.py
